# Copyright 2019, Oath Inc.
# Licensed under the terms of the BSD 3 Clause license. See LICENSE file in project root for terms.
[metadata]
author = Verizon Media Python Platform Team
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: System :: Systems Administration
    Topic :: Utilities
description = Redis built into a python package
keywords = redis sqlite python service integrated
license = BSD License
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
name = redislite
url = https://github.com/yahoo/redislite
version = 5.0.5

[options]
install_requires=
    redis
    psutil

packages=
    redislite

python_requires = >="3.5"

[sdv4.version]
version_plugin = SDV4_BUILD_NUMBER
