[metadata]
author = Verizon Media Python Platform Team
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: BSD :: FreeBSD
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: SunOS/Solaris
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: System :: Systems Administration
    Topic :: Utilities
description = Redis built into a python package
keywords = redis sqlite python service integrated
license = BSD License
license_file = LICENSE.txt
long_description = file:README.md
long_description_content_type = text/markdown
name = redislite
project_urls =
    CI Pipeline = https://cd.screwdriver.cd/pipelines/2880/events
    Documentation = https://redislite.readthedocs.io/en/latest/
    Source = https://github.com/yahoo/redislite
url = https://github.com/yahoo/redislite
version = 5.0.6

[options]
install_requires=
    redis
    psutil
    setuptools>38.0
packages=
    redislite
python_requires = >=2.7.11

[screwdrivercd.version]
version_type = sdv4_SD_BUILD
